# akd-ext-mcp-test

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  cmr-care-hitl.py  pyproject.toml
akd_ext/: __init__.py  _types.py  files.py  structures.py
akd_ext/agents/: __init__.py  _base.py  _mixins.py  astro_search_care.py  cmr_care.py  code_search_care.py  gap.py  pds_search_care.py
akd_ext/agents/closed_loop_cm1/: __init__.py  capability_feasibility_mapper.py  experiment_implementation.py  interpretation_paper_assembly.py  research_report_generator.py  workflow_spec_builder.py
akd_ext/agents/closed_loop_cm1/context/: cluster_it.md  cm1_readme.md
akd_ext/agents/research_partner/: __init__.py  capability_feasibility_mapper.py  experiment_implementation.py  interpretation_paper_assembly.py  workflow_spec_builder.py
akd_ext/mcp/: __init__.py  converter.py  decorators.py  registry.py  server.py
akd_ext/tools/: __init__.py  dummy.py  get_place.py  pdf_parser.py  repository_search_tool.py  sde_search.py
akd_ext/tools/code_search/: code_signals.py  code_signals_search.py  repository_search.py  utils.py
akd_ext/tools/eie/: __init__.py  stac_item_search.py  stac_stats.py  utils.py  viz.py
akd_ext/ui/: __init__.py  cmr_care_app.py  index.html
docs/development/: creating_agents.md
docs/specs/: HUMAN-IN-THE-LOOP.md
notebooks/: Closed Loop Agent CM1 Workflow.ipynb
scripts/: check_openai_key.py
tests/: conftest.py  test_file_attachment_mixin.py  test_files.py
tests/agents/: test_astro_search_care.py  test_cmr_care.py  test_gap.py  test_pds_search_care.py  test_union_output.py
tests/agents/research_partner/: test_capability_feasibility_mapper.py  test_experiment_implementation.py  test_interpretation_paper_assembly.py  test_workflow_spec_builder.py
tests/mcp/: test_mcp_pipeline.py
tests/tools/: __init__.py  test_pdf_parser.py  test_sde_search.py
tests/tools/code_search/: test_code_signals_search.py  test_repository_search.py  test_utils.py
